--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,15 @@
 services:
+  db:
+    image: postgres:latest
+    container_name: database_switches
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=switches_store
+      - POSTGRES_HOST=database_switches
+      - POSTGRES_PORT=5432  
+    ports:
+      - 6015:5432
   api:
     container_name: mech-switch-dev
     image: mech-switch:latest
@@ -6,3 +17,9 @@ services:
       - 6012:6012
     volumes:
       - .:/app
+    environment:
+      - GOOSE_DRIVER=postgres
+      - GOOSE_DBSTRING=host=database_switches user=admin dbname=switches_store sslmode=disable password=test
+      - GOOSE_MIGRATION_DIR=./internal/migs
+    links:
+        - db
